added dark background variables

--- a/_app/css/variables.css
+++ b/_app/css/variables.css
@@ -29,4 +29,20 @@
 	--italian-orange: #A74D56;
 	--italian-spritz: #9DAABB;
 
+	/********** background colors (darker) *********/
+	--dry-london-darker: #236da9;
+	--absinthe-darker: #187238;
+	--agave-reserva-darker: #167571;
+	--amaretti-darker: #ddb443;
+	--american-malt-darker: #5b6079;
+	--apertif-dry-darker: #6e5005;
+	--coffee-original-darker: #595764;
+	--orange-sec-darker: #c94e2c;
+	--pink-london-darker: #f5697e;
+	--spiced-cane-darker: #8E4451;
+	--white-cane-darker: #c7b552;
+	--dark--darker: #7a4946;
+	--italian-orange-darker: #a33b46;
+	--italian-spritz-darker: #8ea3be;
+
 }
