--- a/_app/css/main.css
+++ b/_app/css/main.css
@@ -1,2 +1,5 @@
 @import '/_app/css/reset.css';
+@import '/_app/css/variables.css';
+@import '/_app/css/base.css';
 @import '/_app/css/modules/home.css';
+@import '/_app/css/modules/navigation.css';
