--- a/_app/css/modules/navigation.css
+++ b/_app/css/modules/navigation.css
@@ -34,7 +34,12 @@
 	transition: all ease-in-out 0.3s;
 }
 
-@media screen and (min-width: 778px) {
+@media screen and (min-width: 992px) {
+	.navigation {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+	}
 	
 	.navigation li button:hover {
 		transform: translateY(-1rem)
