--- a/_app/css/modules/navigation.css
+++ b/_app/css/modules/navigation.css
@@ -4,7 +4,8 @@
 	display: flex;
 	gap: 4rem;
 	padding: 1rem;
-	overflow: scroll;
+	overflow-x: scroll;
+	overflow-y: hidden;
 	width: 100vw;
 }
 
@@ -35,12 +36,17 @@
 }
 
 @media screen and (min-width: 992px) {
-	.navigation {
+
+	.nav {
 		position: absolute;
 		bottom: 0;
 		left: 0;
 	}
-	
+
+	.navigation {
+		overflow: hidden;
+	}
+
 	.navigation li button:hover {
 		transform: translateY(-1rem)
 	}
