--- a/_app/css/modules/home.css
+++ b/_app/css/modules/home.css
@@ -2,7 +2,6 @@
 	position: relative;
 	width: 100%;
 	height: 100dvh;
-	background-color: var(--absinthe);
 	background: linear-gradient(var(--absinthe), var(--absinthe), var(--absinthe-darker));
 	display: flex;
 	flex-direction: column;
@@ -10,7 +9,7 @@
 	justify-content: center;
 	gap: 1rem;
 	padding: 1rem;
-	/* overflow: hidden; */
+	overflow: hidden;
 }
 
 .information {
@@ -52,13 +51,12 @@
 	background: url(../../assets/icons/clickMe-button.svg);
 	background-repeat: no-repeat;
 	width: 100px;
-	height: 100%;
+	height: 100px;
 	position: absolute;
 	z-index: 10;
 	right: -3rem;
 	top: 4.5rem;
 }
-
 
 .navigation_button {
 	display: none;
@@ -66,41 +64,56 @@
 }
 
 @media screen and (min-width: 992px) {
+	.main_container {
+		flex-direction: row-reverse;
+		justify-content: center;
+		align-items: flex-start;
+		padding: 3rem 6rem 0 0;
+	}
+
 	.information {
-		display: block;
-		height: 500px;
-		width: 500px;
-		padding-right: 10rem;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: flex-start;
+		width: 40%;
+		margin-top: 4rem;
+		gap: 2rem;
+	}
+
+	.information-text {
+		width: 75%;
+	}
+
+	.main_image {
+		height: 510px;
+		display: flex;
+		justify-content: center;
+		position: relative;
+	}
+
+	.img::before {
+		right: -2.8rem;
+		top: 6.5rem;
 	}
 
 	.logo img {
-		height: 200px;
 		width: 100%;
+		max-width: 450px;
 		object-fit: contain;
 	}
-	.main_container {
-		flex-direction: row-reverse; 
-		justify-content: center;
-		gap: 0;
+
+	.logo {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
+
 
 	.mobile-logo {
 		display: none;
 	}
 
-
-	.sub-header__sans-serif, .sub-header__serif {
-		display: block;
-		text-transform: uppercase;
-	}
-	.sub-header__sans-serif {
-		font-family: var(--paragraph-font-family)
-	}
-
-	.sub-header__serif {
-		font-family: var(--heading-font-family)
-
-	}
 	.navigation_button {
 		position: absolute;
 		background-color: transparent;
