--- a/_app/css/modules/home.css
+++ b/_app/css/modules/home.css
@@ -60,7 +60,6 @@
 
 .navigation_button {
 	display: none;
-
 }
 
 @media screen and (min-width: 992px) {
@@ -68,7 +67,7 @@
 		flex-direction: row-reverse;
 		justify-content: center;
 		align-items: flex-start;
-		padding: 3rem 6rem 0 0;
+		padding: 6rem 6rem 0 0;
 	}
 
 	.information {
@@ -109,15 +108,15 @@
 		align-items: center;
 	}
 
-
 	.mobile-logo {
 		display: none;
 	}
 
 	.navigation_button {
+		display: none; /*make display block*/
 		position: absolute;
 		background-color: transparent;
 		border: none;
-		bottom: 1rem;
+		bottom: 2rem;
 	}
 }
