--- a/_app/css/modules/navigation.css
+++ b/_app/css/modules/navigation.css
@@ -41,6 +41,8 @@
 		position: absolute;
 		bottom: 0;
 		left: 0;
+		transition: all 0.3s ease-in;
+		transform: translateY(0); /*make 200px*/
 	}
 
 	.navigation {
