added background color change functioanlity

--- a/_app/css/variables.css
+++ b/_app/css/variables.css
@@ -19,7 +19,7 @@
 	--amaretti: #E0BB55;
 	--american-malt: #64687B;
 	--apertif-dry: #805E06;
-	--coffee-original: #626166;
+	--coffee-originale: #626166;
 	--orange-sec: #C75A3B;
 	--pink-london: #FF7D91;
 	--spiced-cane: #8E4451;
@@ -35,12 +35,12 @@
 	--amaretti-darker: #ddb443;
 	--american-malt-darker: #5b6079;
 	--apertif-dry-darker: #6e5005;
-	--coffee-original-darker: #595764;
+	--coffee-originale-darker: #595764;
 	--orange-sec-darker: #c94e2c;
 	--pink-london-darker: #f5697e;
 	--spiced-cane-darker: #8E4451;
 	--white-cane-darker: #c7b552;
-	--dark--darker: #7a4946;
+	--dark-cane-darker: #7a4946;
 	--italian-orange-darker: #a33b46;
 	--italian-spritz-darker: #8ea3be;
 
