changed bottle darker variables

--- a/_app/css/variables.css
+++ b/_app/css/variables.css
@@ -32,16 +32,16 @@
 	--dry-london-darker: #236da9;
 	--absinthe-darker: #0e4621;
 	--agave-reserva-darker: #167571;
-	--amaretti-darker: #ddb443;
-	--american-malt-darker: #5b6079;
-	--apertif-dry-darker: #6e5005;
-	--coffee-originale-darker: #595764;
-	--orange-sec-darker: #c94e2c;
-	--pink-london-darker: #f5697e;
+	--amaretti-darker: #8b6d19;
+	--american-malt-darker: #404560;
+	--apertif-dry-darker: #503a02;
+	--coffee-originale-darker: #36343e;
+	--orange-sec-darker: #792812;
+	--pink-london-darker: #a53445;
 	--spiced-cane-darker: #8E4451;
 	--white-cane-darker: #c7b552;
-	--dark-cane-darker: #7a4946;
-	--italian-orange-darker: #a33b46;
-	--italian-spritz-darker: #8ea3be;
+	--dark-cane-darker: #56312f;
+	--italian-orange-darker: #681f27;
+	--italian-spritz-darker: #405570;
 
 }
