--- a/_app/css/modules/information.css
+++ b/_app/css/modules/information.css
@@ -7,3 +7,38 @@
 	gap: 1rem;
 	padding: 1rem;
 }
+
+header {
+	align-self: flex-start;
+}
+
+h1 {
+	text-align: center;
+	font-family: var(--paragraph-font-family);
+	font-weight: 400;
+	text-transform: uppercase;
+	position: relative;
+	margin-bottom: 2rem;
+}
+
+h1::after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	background-color: var(--font-color);
+	bottom: 0;
+	left: 0;
+}
+
+.product-image {
+	display: flex;
+	justify-content: center;
+	height: 300px;
+	margin: 0 auto;
+}
+
+.product-image img {
+	height: 100%;
+}
+
