media query styling information page

--- a/_app/css/main.css
+++ b/_app/css/main.css
@@ -5,3 +5,5 @@
 @import '/_app/css/modules/home.css';
 @import '/_app/css/modules/navigation.css';
 @import '/_app/css/modules/information.css';
+@import '/_app/css/modules/informationTabs.css';
+@import '/_app/css/modules/table.css';
