--- a/_app/css/modules/information.css
+++ b/_app/css/modules/information.css
@@ -5,23 +5,26 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 1rem;
-	padding: 1rem;
+	padding: 1rem 2rem;
+	text-align: center;
 }
 
-header {
+.body__information header {
 	align-self: flex-start;
 }
 
-h1 {
+.body__information h1 {
+	display: block;
 	text-align: center;
-	font-family: var(--paragraph-font-family);
+	font-family: var(--heading-font-family);
 	font-weight: 400;
 	text-transform: uppercase;
 	position: relative;
 	margin-bottom: 2rem;
+
 }
 
-h1::after {
+.body__information h1::after {
 	content: '';
 	position: absolute;
 	width: 100%;
@@ -29,16 +32,67 @@ h1::after {
 	background-color: var(--font-color);
 	bottom: 0;
 	left: 0;
+
 }
 
 .product-image {
 	display: flex;
 	justify-content: center;
 	height: 300px;
-	margin: 0 auto;
+	margin: 1rem auto 2rem;
 }
 
 .product-image img {
 	height: 100%;
 }
 
+.product-bio, .product-flavour-profile, .product-flavours {
+	margin-bottom: 1rem;
+	font-size: var(--paragraph-font-size);
+	letter-spacing: var(--paragraph-letter-spacing);
+	/* font-family: var(--paragraph-font-family); */
+
+}
+
+.product-flavours {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.product-flavours li img {
+	height: 1.2rem;
+	padding-right: 0.2rem;
+}
+
+@media screen and (min-width: 992px) {
+	.product {
+		position: relative;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 80vw;
+		height: 60vh;
+		align-items: center;
+	}
+
+	.product-underlay {
+		background-color: var(--american-malt-darker);
+		opacity: .3;
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		z-index: -1;
+	}
+
+	.product-image {
+		margin: 0 auto;
+		justify-self: center;
+	}
+
+	.product-text {
+		width: 50%;
+		margin: 0 auto;
+		text-align: left;
+	}
+}
