fixed navigation fucntionality

--- a/_app/css/modules/home.css
+++ b/_app/css/modules/home.css
@@ -113,7 +113,7 @@
 	}
 
 	.navigation_button {
-		display: none; /*make display block*/
+		display: block;
 		position: absolute;
 		background-color: transparent;
 		border: none;
