--- a/_app/css/modules/navigation.css
+++ b/_app/css/modules/navigation.css
@@ -42,7 +42,7 @@
 		bottom: 0;
 		left: 0;
 		transition: all 0.3s ease-in;
-		transform: translateY(0); /*make 200px*/
+		transform: translateY(200px);
 	}
 
 	.navigation {
