--- a/_app/css/main.css
+++ b/_app/css/main.css
@@ -7,3 +7,4 @@
 @import '/_app/css/modules/information.css';
 @import '/_app/css/modules/informationTabs.css';
 @import '/_app/css/modules/table.css';
+@import '/_app/css/modules/header.css';
