--- a/_app/css/base.css
+++ b/_app/css/base.css
@@ -1,6 +1,8 @@
 body {
 	color: var(--font-color);
 	font-size: 16px;
+	background: linear-gradient(var(--absinthe), var(--absinthe), var(--absinthe-darker));
+
 }
 
 button {
