--- a/_app/css/modules/header.css
+++ b/_app/css/modules/header.css
@@ -1,8 +1,3 @@
-.header {
-}
-
-.header__navigation {
-}
-
-.header__navigation--visible {
+.product-category button:focus {
+	text-decoration: underline;
 }
