changed click me svg based on category showing

--- a/_app/css/modules/home.css
+++ b/_app/css/modules/home.css
@@ -45,9 +45,11 @@
 	position: relative;
 }
 
+
+
 .img::before {
 	content: '';
-	background: url(../../assets/icons/clickMe-button.svg);
+	background: var(--clickMeButton);
 	background-repeat: no-repeat;
 	width: 100px;
 	height: 100px;
