--- a/_app/css/variables.css
+++ b/_app/css/variables.css
@@ -57,4 +57,6 @@
 	--classico-grande-darker: #64693d;
 
 
+	/*CLICK ME BUTTON*/
+	--clickMeButton: url(../../assets/icons/clickMe-button-spirit.svg);
 }
