centered sparkling wing

--- a/_app/css/modules/navigation.css
+++ b/_app/css/modules/navigation.css
@@ -7,6 +7,7 @@
 	overflow-x: scroll;
 	overflow-y: hidden;
 	width: 100vw;
+	justify-content: center;
 }
 
 .navigation__image {
@@ -38,7 +39,7 @@
 @media screen and (min-width: 992px) {
 	.nav {
 		position: absolute;
-		bottom: 0;
+		bottom: 0.5rem;
 		left: 0;
 	}
 
