--- a/_app/css/modules/home.css
+++ b/_app/css/modules/home.css
@@ -45,8 +45,6 @@
 	position: relative;
 }
 
-
-
 .img::before {
 	content: '';
 	background: var(--clickMeButton);
@@ -68,7 +66,7 @@
 		flex-direction: row-reverse;
 		justify-content: center;
 		align-items: flex-start;
-		padding: 6rem 6rem 0 0;
+		padding: 6rem 0 0 0;
 	}
 
 	.information {
