started setting global variables

--- a/_app/css/variables.css
+++ b/_app/css/variables.css
@@ -59,4 +59,6 @@
 
 	/*CLICK ME BUTTON*/
 	--clickMeButton: url(../../assets/icons/clickMe-button-spirit.svg);
+	--clickMeTop: -2.8rem;
+	--clickMeRight: 6.5rem;
 }
