--- a/_app/css/modules/home.css
+++ b/_app/css/modules/home.css
@@ -91,8 +91,8 @@
 	}
 
 	.img::before {
-		right: -2.8rem;
-		top: 6.5rem;
+		right: var(--clickMeRight);
+		top: var(--clickMeTop)
 	}
 
 	.logo img {
