--- a/_app/css/modules/home.css
+++ b/_app/css/modules/home.css
@@ -24,11 +24,11 @@
 
 .main_image::after {
 	content: '';
-	width: 170px;
+	width: var(--clickMeAfterWidth); /*570*/
 	height: 170px;
 	border-radius: 50%;
 	transform: rotateX(97deg);
-	filter: blur(30px);
+	filter: var(--clickMeAfterBlur);  /*60*/
 	background-color: rgba(0, 0, 0, 0.3);
 	position: absolute;
 	bottom: -6rem;
