--- a/_app/css/variables.css
+++ b/_app/css/variables.css
@@ -59,4 +59,6 @@
 
 	/*CLICK ME BUTTON*/
 	--clickMeButton: url(../../assets/icons/clickMe-button-spirit.svg);
+	--clickMeAfterWidth: 170px;
+	--clickMeAfterBlur: blur(30px);
 }
