--- a/_app/css/modules/information.css
+++ b/_app/css/modules/information.css
@@ -68,6 +68,7 @@
 .product-flavours li img {
 	height: 1.2rem;
 	padding-right: 0.2rem;
+	filter: invert(100%);
 }
 
 @media screen and (min-width: 992px) {
