--- a/_app/css/variables.css
+++ b/_app/css/variables.css
@@ -32,7 +32,7 @@
 	--dark-n-spicy-premix-drinks:#6F494D;
 	--american-malt-and-cola-premix-drinks: #546177;
 	--amalfi-spritz-premix-drinks: #D2B094;
-	--classico-grande: #777C51;
+	--classico-grande: #2f5a46;
 
 	/********** background colors (darker) *********/
 	--dry-london-spirit-darker: #236da9;
@@ -54,7 +54,7 @@
 	--dark-n-spicy-premix-drinks-darker:#603539;
 	--american-malt-and-cola-premix-drinks-darker: #43526b;
 	--amalfi-spritz-premix-drinks-darker: #895f3d;
-	--classico-grande-darker: #64693d;
+	--classico-grande-darker: #1e3a2d;
 
 
 	/*CLICK ME BUTTON*/
