--- a/_app/css/modules/navigation.css
+++ b/_app/css/modules/navigation.css
@@ -7,7 +7,6 @@
 	overflow-x: scroll;
 	overflow-y: hidden;
 	width: 100vw;
-	justify-content: center;
 }
 
 .navigation__image {
@@ -17,6 +16,7 @@
 
 .navigation li {
 	position: relative;
+	margin: 0 auto;
 }
 
 .navigation li::after {
