--- a/_app/css/modules/navigation.css
+++ b/_app/css/modules/navigation.css
@@ -41,10 +41,12 @@
 		position: absolute;
 		bottom: 0.5rem;
 		left: 0;
+		width: 100%;
+		overflow: hidden;
 	}
 
 	.navigation {
-		overflow-x: scroll;
+		overflow-x: hidden;
 	}
 
 	.navigation li button:hover {
